Use new lookup system to find related_url in json data directly. Fixed a bug where *too much* was hooked up to the related URL each time by using the local element context.

--- a/core/src/zeit/find/browser/resources/find.css
+++ b/core/src/zeit/find/browser/resources/find.css
@@ -74,8 +74,7 @@
   top: 0;
 }
 
-.favorite_url,
-.related_url {
+.favorite_url {
   display: none;
 }
 
